namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    name: kafka
    app: confluent-kafka
