kafka-service-mtls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: confluent-kafka
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: internal
    targetPort: 9092
  - port: 9093
    name: controller
    targetPort: 9093
  - port: 9094
    name: external-ssl
    targetPort: 9094
  - port: 9999
    name: jmx
    targetPort: 9999
  selector:
    app: kafka
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: confluent-kafka
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: internal
    targetPort: 9092
  - port: 9093
    name: controller
    targetPort: 9093
  - port: 9094
    name: external-ssl
    targetPort: 9094
  - port: 9999
    name: jmx
    targetPort: 9999
  clusterIP: None
  selector:
    app: kafka

---
# Kafka-0 Internal LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: kafka-0-internal
  namespace: confluent-kafka
  labels:
    app: kafka
    instance: kafka-0
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-0
  ports:
  - port: 9094
    name: external-ssl
    targetPort: 9094
    protocol: TCP
  - port: 9092
    name: internal
    targetPort: 9092
    protocol: TCP

---
# Kafka-1 Internal LoadBalancer Service  
apiVersion: v1
kind: Service
metadata:
  name: kafka-1-internal
  namespace: confluent-kafka
  labels:
    app: kafka
    instance: kafka-1
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-1
  ports:
  - port: 9094
    name: external-ssl
    targetPort: 9094
    protocol: TCP
  - port: 9092
    name: internal
    targetPort: 9092
    protocol: TCP

---
# Kafka-2 Internal LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: kafka-2-internal
  namespace: confluent-kafka
  labels:
    app: kafka
    instance: kafka-2
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  selector:
    app: kafka
    statefulset.kubernetes.io/pod-name: kafka-2
  ports:
  - port: 9094
    name: external-ssl
    targetPort: 9094
    protocol: TCP
  - port: 9092
    name: internal
    targetPort: 9092
    protocol: TCP
